# amazon-test

./: .gitignore  README.md  amazon_scraper.py  config.py  configure.json  data_saver.py  driver_manager.py  element.txt  finalExcel.py  logger.py  main.py  main_window.py  parallel_scraper.py  pyproject.toml  requirements.txt  scraper.py  vpn_helper.py
