[tool.poetry]
name = "amazon-spider"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fake-useragent = "2.0.3"
pandas = "2.2.3"
selenium = "4.28.1"
undetected-chromedriver = "3.5.5"
openpyxl = "3.1.5"
tqdm = "4.67.1"
pyside6 = "^6.8.2.1"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
